v0.3.0/_sources/gallery/plot/scatter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/plot/scatter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_plot_scatter.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_plot_scatter.py:


Scatter plots with a legend
---------------------------

To create a scatter plot with a legend one may use a loop and create one scatter
plot per item to appear in the legend and set the label accordingly.

Modified from the matplotlib example:
https://matplotlib.org/gallery/lines_bars_and_markers/scatter_with_legend.html

.. GENERATED FROM PYTHON SOURCE LINES 11-42



.. image:: /gallery/plot/images/sphx_glr_scatter_001.png
    :alt: scatter
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default


    import numpy as np
    import pygmt

    np.random.seed(19680801)
    n = 200  # number of random data points

    fig = pygmt.Figure()
    fig.basemap(
        region=[-0.1, 1.1, -0.1, 1.1],
        projection="X10c/10c",
        frame=["xa0.2fg", "ya0.2fg", "WSrt"],
    )
    for color in ["blue", "orange", "green"]:
        x, y = np.random.rand(2, n)  # random X and Y data in [0,1]
        sizes = np.random.rand(n) * 0.5  # random size [0,0.5], in cm
        # plot data points as circles (style="c"), with different sizes
        fig.plot(
            x=x,
            y=y,
            style="c",
            sizes=sizes,
            color=color,
            # Set the legend label,
            # and set the circle size to be 0.25 cm (+S0.25c) in legend
            label=f"{color}+S0.25c",
            transparency=70,  # set transparency level for all symbols
        )

    fig.legend(transparency=30)  # set transparency level for legends
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.035 seconds)


.. _sphx_glr_download_gallery_plot_scatter.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: scatter.py <scatter.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: scatter.ipynb <scatter.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
